# jerm-tui

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
docs/: SPRINT_1_REQUIREMENTS.md  SPRINT_2_REQUIREMENTS.md
src/: app.rs  main.rs
src/git/: mod.rs  status.rs
src/highlight/: mod.rs  tokenizer.rs
src/navigation/: directory.rs  mod.rs
src/shell/: executor.rs  parser.rs
src/shortcuts/: manager.rs  mod.rs  storage.rs
src/theme/: colors.rs  icons.rs  mod.rs
src/ui/: mod.rs  navigator.rs  sidebar.rs  terminal.rs
