[package]
name = "jerm"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A modern terminal emulator for macOS with assisted navigation and directory shortcuts"
license = "MIT"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
